# automata

./: .drone.yml  .gitignore  .test-assignee  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.playwright-mcp/: page-2026-05-11T10-11-25-293Z.yml  page-2026-05-11T10-11-38-043Z.yml  page-2026-05-11T10-11-48-931Z.yml  page-2026-05-11T10-11-57-499Z.yml  page-2026-05-11T10-12-04-776Z.yml  page-2026-05-11T10-12-13-622Z.yml  page-2026-05-11T10-12-21-958Z.yml  page-2026-05-11T10-12-38-909Z.yml  page-2026-05-11T10-12-47-198Z.yml  page-2026-05-11T10-12-54-262Z.yml  page-2026-05-11T10-31-02-402Z.yml  page-2026-05-11T10-32-13-351Z.yml  page-2026-05-11T10-32-26-984Z.yml  page-2026-05-11T14-17-02-088Z.yml  page-2026-05-11T14-17-05-996Z.yml  page-2026-05-11T14-17-21-006Z.yml  page-2026-05-11T14-17-35-288Z.yml  page-2026-05-11T14-23-06-377Z.yml  page-2026-05-11T14-23-26-923Z.yml
automations/: dependabot-approve.yaml  dependabot-automerge.yaml  dependabot-merge.yaml  issue-sync-atlascli.yaml  jira-lifecycle-atlascli.yaml  jira-lifecycle-close.yaml  jira-lifecycle-cloudp.yaml
deploy/: eventbus-values.yaml  eventsource-sce.yaml  eventsource.yaml  sensor.yaml  staging.yaml
docs/: presentation.html
docs/research/: KANOPY.md  WORKFLOWS.md
docs/superpowers/plans/: 2026-05-11-automata.md
docs/superpowers/specs/: 2026-05-11-automata-design.md  2026-06-05-automation-error-handling-design.md
environments/: staging.yaml
environments/common/: eventsource.yaml  sensor.yaml
functions/: notify-slack.yaml
k8s/: sensor.yaml
src/: app_state.rs  config.rs  context.rs  engine.rs  expr.rs  main.rs  types.rs
src/functions/: builtin.rs  github.rs  jira.rs  mod.rs  named.rs
src/github/: api.rs  mod.rs
src/handlers/: doctor.rs  github.rs  github_raw.rs  mod.rs
src/jira/: mod.rs
tests/fixtures/: test_rsa_key.pem
