[package]
name = "automata"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
glob = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
base64 = "0.22"
subtle = "2"
jaq-interpret = "1"
jaq-core = "1"
jaq-std = "1"
jaq-parse = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
