[package]
name = "automata"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = { version = "10", features = ["use_pem", "rust_crypto"] }
regex = "1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["http-proto", "reqwest-client"] }
anyhow = "1"
glob = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
base64 = "0.22"
subtle = "2"
jaq-core = "3"
jaq-std = "3"
jaq-json = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
rsa = "0.9"
wiremock = "0.6"

